--- a/index.html
+++ b/index.html
@@ -1,13 +1,106 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Music History</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Music History</title>
 </head>
 
-<body>
-
-
+<body class="container-fluid">
+    <header class="col-md-12 top">
+        <nav class="main-section">
+            <ul id="nav">
+                <li><a href="#">View Music |</a></li>
+                <li><a href="#">Add Music |</a></li>
+                <li><a href="#">Profile</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="col-md-3 main">
+        <p>Song length:</p>
+        <input type="range" min="0" max="10" value="0" step="1" />
+        <p>Artist:</p>
+        <select name="artist">
+            <option value="The Beatles">The Beatles</option>
+            <option value="Leon Bridges">Leon Bridges</option>
+            <option value="Jay Z">Jay Z</option>
+            <option value="Michael Jackson">Michael Jackson</option>
+            <option value="Rilo Kiley">Rilo Kiley</option>
+        </select>
+        <div class="album">
+            <p>Album:</p>
+            <select name="album" class="album">
+                <option value="Revolver">Revolver</option>
+                <option value="Coming Home">Coming Home</option>
+                <option value="The Black Album">The Black Album</option>
+                <option value="Thriller">Thriller</option>
+                <option value="More Adventurous">More Adventurous</option>
+            </select>
+        </div>
+        <div>
+            <p>Genre:</p>
+            <div class="leftgen col-md-3">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Rock
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Pop
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Blues
+                    </label>
+                </div>
+            </div>
+            <div class="rightgen col-md-3">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Classical
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Jazz
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Hip-hop
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+         <footer class="filter">
+            <a href="#" role="button">Filter</a>
+            </footer>
+        </div>
+    </section>
+    <section class="col-md-9 faves">
+        <h3 class="title">Tax Man</h3>
+        <p class="specs">
+            <aside>The Beatles | Revolver | Rock</aside>
+        </p>
+        <h3 class="title">99 Problems</h3>
+        <p class="specs">
+            <aside>Jay Z | The Black Album | Hip-hop</aside>
+        </p>
+        <h3 class="title">Billie Jean</h3>
+        <p class="specs">
+            <aside>Michael Jackson | Thriller | Rock</aside>
+        </p>
+        <h3 class="title">Portions For Foxes</h3>
+        <p class="specs">
+            <aside>Rilo Kiley | More Adventurous | Folk</aside>
+        </p>
+    </section>
+    <script src="songs.js"></script>
 </body>
+
 </html>
