completed MH2 requirements

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </footer>
         </div>
     </section>
-    <section class="col-md-9 faves">
+    <section id ="output-target" class="col-md-9 faves">
         <h3 class="title">Tax Man</h3>
         <p class="specs">
             <aside>The Beatles | Revolver | Rock</aside>
